force-app/main/default/objects/Ham_Events_Filter_Metadata__mdt/Ham_Events_Filter_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Ham Events Filter Metadata</label>
    <pluralLabel>Ham Events Filter Metadata</pluralLabel>
</CustomObject>