force-app/main/default/objects/Ham_Events_Filter_Metadata__mdt/fields/HAM_Direct_Filter__c.field-meta.xml
<CustomField>
    <fullName>HAM_Direct_Filter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>HAM Direct Filter</label>
    <type>Checkbox</type>
</CustomField>