force-app/main/default/objects/Ham_Events_Filter_Metadata__mdt/fields/HAM_Order__c.field-meta.xml
<CustomField>
    <fullName>HAM_Order__c</fullName>
    <label>HAM Order</label>
    <length>2</length>
    <type>Text</type>
</CustomField>