force-app/main/default/objects/Ham_Events_Filter_Metadata__mdt/fields/HAM_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>HAM_Placeholder__c</fullName>
    <label>HAM Placeholder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>