force-app/main/default/objects/Ham_Events_Filter_Metadata__mdt/fields/HAM_Reference_Field_API__c.field-meta.xml
<CustomField>
    <fullName>HAM_Reference_Field_API__c</fullName>
    <label>HAM Reference Field API</label>
    <length>80</length>
    <type>Text</type>
</CustomField>