force-app/main/default/objects/Ham_Events_Filter_Metadata__mdt/fields/HAM_Reference_Values__c.field-meta.xml
<CustomField>
    <fullName>HAM_Reference_Values__c</fullName>
    <label>HAM Reference Values</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>